--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -7,6 +7,15 @@ on:
   release:
     types:
       - published
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Image tag to push (defaults to `latest`)'
+        required: false
+        default: 'latest'
+      image_registry:
+        description: 'Override the image registry (defaults to `ghcr.io/chrisgeo/dev-health-ops`)'
+        required: false
 
 env:
   IMAGE_REGISTRY: ghcr.io/chrisgeo/dev-health-ops
@@ -27,7 +36,15 @@ jobs:
           fetch-depth: 0
 
       - name: Determine version
-        run: echo "VERSION=${{ github.event_name == 'release' && github.event.release.tag_name || github.ref_name }}" >> $GITHUB_ENV
+        run: |
+          if [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" ]]; then
+            echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+            if [[ -n "${{ github.event.inputs.image_registry }}" ]]; then
+              echo "IMAGE_REGISTRY=${{ github.event.inputs.image_registry }}" >> $GITHUB_ENV
+            fi
+          else
+            echo "VERSION=${{ github.event_name == 'release' && github.event.release.tag_name || github.ref_name }}" >> $GITHUB_ENV
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
