--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -9,10 +9,6 @@ on:
       - published
   workflow_dispatch:
     inputs:
-      version:
-        description: 'Image tag to push (defaults to `latest`)'
-        required: false
-        default: 'latest'
       image_registry:
         description: 'Override the image registry (defaults to `ghcr.io/chrisgeo/dev-health-ops`)'
         required: false
@@ -38,31 +34,44 @@ jobs:
       - name: Determine version
         run: |
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
-          if [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" ]]; then
-            INPUT_VER="${{ github.event.inputs.version }}"
-            if [[ "${INPUT_VER}" == "latest" ]]; then
-              echo "PYTHON_VERSION=0.0.0+${SHORT_SHA}" >> $GITHUB_ENV
-              echo "DOCKER_TAG=latest" >> $GITHUB_ENV
-            else
-              # Manual run: Docker tag with hyphen, Python version with plus
-              echo "PYTHON_VERSION=${INPUT_VER}+${SHORT_SHA}" >> $GITHUB_ENV
-              echo "DOCKER_TAG=${INPUT_VER}-${SHORT_SHA}" >> $GITHUB_ENV
-            fi
-            if [[ -n "${{ github.event.inputs.image_registry }}" ]]; then
-              echo "IMAGE_REGISTRY=${{ github.event.inputs.image_registry }}" >> $GITHUB_ENV
-            fi
-          elif [[ "${GITHUB_EVENT_NAME}" == "release" ]]; then
-            RELEASE_TAG="${{ github.event.release.tag_name }}"
-            echo "PYTHON_VERSION=${RELEASE_TAG}" >> $GITHUB_ENV
-            echo "DOCKER_TAG=${RELEASE_TAG}" >> $GITHUB_ENV
-          elif [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
-            echo "PYTHON_VERSION=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "DOCKER_TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          else
-            # Branch push: Use SHA for Docker tag, PEP 440 for Python
-            echo "PYTHON_VERSION=0.0.0.dev0+${SHORT_SHA}" >> $GITHUB_ENV
-            echo "DOCKER_TAG=${SHORT_SHA}" >> $GITHUB_ENV
+          
+          # Default base Registry
+          CURRENT_REGISTRY="${IMAGE_REGISTRY}"
+          
+          # Handle Manual Registry Override
+          if [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" && -n "${{ github.event.inputs.image_registry }}" ]]; then
+            CURRENT_REGISTRY="${{ github.event.inputs.image_registry }}"
           fi
+
+          # Default Versioning (Branch/Manual on Branch)
+          PYTHON_VERSION="0.0.0.dev0+${SHORT_SHA}"
+          DOCKER_TAG="${SHORT_SHA}"
+          
+          # Release/Tag Overrides
+          if [[ "${GITHUB_EVENT_NAME}" == "release" ]]; then
+            RELEASE_TAG="${{ github.event.release.tag_name }}"
+            PYTHON_VERSION="${RELEASE_TAG}"
+            DOCKER_TAG="${RELEASE_TAG}"
+          elif [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
+            PYTHON_VERSION="${GITHUB_REF_NAME}"
+            DOCKER_TAG="${GITHUB_REF_NAME}"
+          fi
+          
+          # Construct Tag Lists
+          # Always include the specific version tag
+          RUNNER_TAGS="${CURRENT_REGISTRY}/dev-hops-runner:${DOCKER_TAG}"
+          API_TAGS="${CURRENT_REGISTRY}/dev-hops-api:${DOCKER_TAG}"
+          
+          # Conditionally add 'latest' tag
+          # Only for 'main' branch or proper Releases/Tags
+          if [[ "${GITHUB_REF_NAME}" == "main" || "${GITHUB_EVENT_NAME}" == "release" || "${GITHUB_REF_TYPE}" == "tag" ]]; then
+             RUNNER_TAGS="${RUNNER_TAGS},${CURRENT_REGISTRY}/dev-hops-runner:latest"
+             API_TAGS="${API_TAGS},${CURRENT_REGISTRY}/dev-hops-api:latest"
+          fi
+          
+          echo "PYTHON_VERSION=${PYTHON_VERSION}" >> $GITHUB_ENV
+          echo "RUNNER_TAGS=${RUNNER_TAGS}" >> $GITHUB_ENV
+          echo "API_TAGS=${API_TAGS}" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -82,9 +91,7 @@ jobs:
           target: runner
           build-args: |
             SETUPTOOLS_SCM_PRETEND_VERSION=${{ env.PYTHON_VERSION }}
-          tags: |
-            ${{ env.IMAGE_REGISTRY }}/dev-hops-runner:${{ env.DOCKER_TAG }}
-            ${{ env.IMAGE_REGISTRY }}/dev-hops-runner:latest
+          tags: ${{ env.RUNNER_TAGS }}
           push: true
 
       - name: Build and push API image
@@ -95,7 +102,5 @@ jobs:
           target: api
           build-args: |
             SETUPTOOLS_SCM_PRETEND_VERSION=${{ env.PYTHON_VERSION }}
-          tags: |
-            ${{ env.IMAGE_REGISTRY }}/dev-hops-api:${{ env.DOCKER_TAG }}
-            ${{ env.IMAGE_REGISTRY }}/dev-hops-api:latest
+          tags: ${{ env.API_TAGS }}
           push: true
