--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -13,9 +13,6 @@ on:
         description: 'Override the image registry (defaults to `ghcr.io/chrisgeo/dev-health-ops`)'
         required: false
 
-env:
-  IMAGE_REGISTRY: ghcr.io/chrisgeo/dev-health-ops
-
 permissions:
   contents: read
   packages: write
@@ -35,8 +32,10 @@ jobs:
         run: |
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
           
-          # Default base Registry
-          CURRENT_REGISTRY="${IMAGE_REGISTRY}"
+          # Calculate Dynamic Registry (lowercase)
+          # This ensures we push to the package associated with THIS repository
+          REPO_NAME_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          CURRENT_REGISTRY="ghcr.io/${REPO_NAME_LOWER}"
           
           # Handle Manual Registry Override
           if [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" && -n "${{ github.event.inputs.image_registry }}" ]]; then
