--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   tag-and-release:
-    if: (github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'pre-release')) || github.event_name == 'workflow_dispatch'
+    if: ((github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'pre-release')) || github.event_name == 'workflow_dispatch') && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -54,10 +54,11 @@ jobs:
           generate_release_notes: true
           prerelease: true
 
-  pypi-publish:
-    name: Build and Publish to PyPI
+  build-and-publish:
+    name: Build and Publish
     needs: tag-and-release
     runs-on: ubuntu-latest
+    environment: release
     permissions:
       contents: read
       id-token: write
