--- a/.github/workflows/publish-on-tag.yml
+++ b/.github/workflows/publish-on-tag.yml
@@ -6,9 +6,10 @@ on:
       - 'v*'
 
 jobs:
-  pypi-publish:
-    name: Build and Publish to PyPI
+  build-and-publish:
+    name: Build and Publish
     runs-on: ubuntu-latest
+    environment: release
     permissions:
       contents: read
       id-token: write
