--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,9 @@ on:
         description: 'The tag to build and publish'
         required: true
         type: string
+    secrets:
+      PYPI_API_TOKEN:
+        required: false
 
 jobs:
   build-and-publish:
