--- a/.github/workflows/release-grafana-plugin.yml
+++ b/.github/workflows/release-grafana-plugin.yml
@@ -26,6 +26,9 @@ on:
         description: 'Branch to commit version bump to (pre-release only)'
         required: false
         type: string
+    secrets:
+      GRAFANA_ACCESS_POLICY_TOKEN:
+        required: false
 
 jobs:
   check-changes:
